--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -5,6 +5,7 @@ development:
     default:
       # Defines the name of the default database that Mongoid can connect to.
       # (required).
+      # allow_dynamic_fields: true
       database: drinkalculator_development
       # Provides the hosts the default session can connect to. Must be an array
       # of host:port pairs. (required)
